resources/assets/css/widgets/alert.scss
@use "../variables" as *;

.pj-alert {
    display: flex;
    align-items: flex-start;
    gap: .75rem;
    padding: 1rem 1.25rem;
    border-left: 4px solid $primary;
    background-color: $primary-100;
    color: $font;
    font-size: .875rem;

    .pj-alert-icon {
        flex-shrink: 0;
        display: flex;
        align-items: center;
        color: $info;

        svg {
            width: 1.125rem;
            height: 1.125rem;
        }
    }

    .pj-alert-body {
        flex: 1;

        .pj-alert-title {
            font-weight: 600;
            font-size: .9375rem;
            margin: 0 0 .25rem;
            color: $info;
        }

        .pj-alert-message {
            margin: 0;
            line-height: 1.5;
        }
    }

    .pj-alert-dismiss {
        flex-shrink: 0;
        background: none;
        border: none;
        cursor: pointer;
        padding: 0;
        line-height: 1;
        color: $font-light;
        font-size: 1.125rem;

        &:hover {
            color: $font;
        }
    }

    &.success {
        border-left-color: $success;
        background-color: $success-light;

        .pj-alert-icon {
            color: $success-dark;
        }

        .pj-alert-title {
            color: $success-dark;
        }
    }

    &.danger {
        border-left-color: $danger;
        background-color: $danger-light;

        .pj-alert-icon {
            color: $danger-dark;
        }

        .pj-alert-title {
            color: $danger-dark;
        }
    }

    &.warning {
        border-left-color: $warning;
        background-color: $warning-light;

        .pj-alert-icon {
            color: $warning-dark;
        }

        .pj-alert-title {
            color: $warning-dark;
        }
    }
}

